--- a/.github/workflows/essentialsplugins-3Series-builds.yml
+++ b/.github/workflows/essentialsplugins-3Series-builds.yml
@@ -253,14 +253,16 @@ jobs:
 
       # Pushes to nuget.org Only if the repo is public and the owner is PepperDash
       - name: Publish to Nuget.org (public repos only) 
-        if: github.repository_owner == 'PepperDash' && (github.repository.private == false || github.repository.internal == false)
+        # if: github.repository_owner == 'PepperDash' && (github.repository.private == false || github.repository.internal == false)
+        if: github.repository_owner == 'PepperDash' && github.repository.visibility == 'public'
         run: |
           echo "Publishing ${{ github.repository }} to NuGet.org" >> $GITHUB_STEP_SUMMARY          
           nuget setApiKey ${{ secrets.NUGET_API_KEY }} -Source https://api.nuget.org/v3/index.json
           nuget push .\output\*.nupkg -Source https://api.nuget.org/v3/index.json
 
       - name: Skipping publish to Nuget.org (non public repos)
-        if: github.repository_owner != 'PepperDash' || (github.repository.private == true || github.repository.internal == true)
+        # if: github.repository_owner != 'PepperDash' || (github.repository.private == true || github.repository.internal == true)
+        if: github.repository_owner != 'PepperDash' && github.repository.visibility != 'public'
         run: echo "Repository is not public, skipping publishing to NuGet.org." >> $GITHUB_STEP_SUMMARY
     
       # Create the release on the source repo
